# autocxx-demo

./: Cargo.toml  README.md  build.rs
src/: foo.cxx  foo.h  main.rs
